clusters/main/apps/picoclaw/ingress-lepi.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picoclaw-lepi
  namespace: picoclaw
  annotations:
    tailscale.com/funnel: "false"
    tailscale.com/tags: "tag:picoclaw"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: picoclaw-lepi
      port:
        number: 18800
  tls:
    - hosts:
        - picoclaw-lepi
